Titleとゲーム画面を切り替えられるようにしたよ

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,7 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+
+Assets/Font/DotGothic16-Regular SDF.asset
+
+Assets/Font/DotGothic16-Regular SDF.asset.meta
